# lifeforce

./: .env.example  .gitignore  README.md  pyproject.toml  test_search_manual.py
data/: search_stats.json  world_model.json
data/chroma_db/: chroma.sqlite3
data/chroma_db_backup_20260409_214145/: chroma.sqlite3
data/chroma_db_rebuilt/: chroma.sqlite3
data/chroma_db_rebuilt_20260409_214353/: chroma.sqlite3
data/chroma_db_rebuilt_20260409_214607/: chroma.sqlite3
data/chroma_db_rebuilt_20260409_214633/: chroma.sqlite3
data/chroma_db_rebuilt_20260409_214713/: chroma.sqlite3
data/kuzu_db/: catalog.kz  metadata.kz
doc/: 1，Lifeforce 项目框架：完整代码生成.md  2，Lifeforce 完整实现：Observer、Executor、Skills 与反思.md  3，Lifeforce 记忆系统重构：从 SQLite 到混合架构.md  4，Lifeforce v1.1 技术实现规格书（供 IDE AI 使用）.md  5，Lifeforce v1.2 增量式灵魂注入规格书（最小影响版）.md  6，Lifeforce v1.3 搜索闭环集成 - 完整实施文档.md  7，Lifeforce 币圈交易生存实验 - 完整实施方案.md  8，Lifeforce 自主进化生命体 - 完整设计方案.md
docs/: architecture.md  development.md  week1_tasks.md
lifeforce/agents/: __init__.py  executor.py  thinker.py  (+5 more)
scripts/: start.sh  test.sh
tests/: test_agents.py  test_apiyi_monitor.py  test_chaos_edge.py  test_google_search.py  test_growth_inputs.py  test_growth_learning.py  test_growth_reflection.py  test_growth_skills.py  test_identity_consistency.py  test_identity_response.py  test_integration_v1_2.py  test_market_observer.py  test_memory.py  test_memory_v2.py  test_meta_cognition.py  test_search_integration.py  test_skills.py  test_thinking_tools.py  test_trading_daemon.py  test_trading_simulator.py  test_trading_strategies.py  test_v11.py
(+48 files in other folders)
