[tool.poetry]
name = "lifeforce"
version = "0.1.0"
description = "A digital life form with autonomous agents and memory"
authors = ["Wells Monta <your@email.com>"]
readme = "README.md"
packages = [{ include = "lifeforce" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
httpx = "^0.28.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
pyyaml = "^6.0.1"
watchdog = "^4.0.0"
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.0"
mem0ai = "^1.0.0"
chromadb = "^0.5.0"
sentence-transformers = "^3.0.0"
networkx = "^3.0"
kuzu = "^0.10.0"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.poetry.scripts]
lifeforce = "lifeforce.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
